--- a/practice2/practice2.1.html
+++ b/practice2/practice2.1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Prsctice 2. Task 1</title>
+    <title>Practice 2. Task 1</title>
     <link rel="stylesheet" href="style1.css">
     <meta name="description" content="Web-page structure">
     <meta name="keywords" content="HTML">
