--- a/practice4/homework4.html
+++ b/practice4/homework4.html
@@ -18,8 +18,26 @@
             <a href="#" class="login-link">УВІЙТИ</a>
         </div>
     </div>
+
+    <div class="login-header-tablet">
+        <div class="except"></div>
+        <div class="cart">
+            <a href="#"><i class="fas fa-shopping-bag"></i>
+                <span class="basket"> Кошик:</span><span class="basket-amount"> 3 товари</span> <span
+                        class="money">530 грн.</span></a>
+        </div>
+        <div class="action-icons">
+            <i class="far fa-user"></i>
+            <i class="fas fa-search"></i>
+        </div>
+    </div>
+
     <div class="box">
-        <div id="search">
+        <button class="menu-button">
+            <a href="#"><i class="fas fa-bars fa-2x"></i></a>
+        </button>
+
+        <div class="search">
             <form action="action_page.php" autocomplete="off"
                   method="get" target="_blank" name="searchbutton">
                 <div class="search-box">
@@ -39,11 +57,9 @@
                 <span class="basket"> Кошик:</span><span class="basket-amount"> 3 товари</span> <span
                         class="money">530 грн.</span></a>
         </div>
+        <div class="except"></div>
     </div>
 
-    <button class="menu-button">
-        <a href="#"><i class="fas fa-bars"></i></a>
-    </button>
     <nav class="menu">
         <ul>
             <li>
@@ -223,8 +239,8 @@
             <table class="summary-table">
                 <thead>
                 <tr>
-                    <th>Товар</th>
-                    <th>Всього</th>
+                    <th class="black">Товар</th>
+                    <th class="black">Всього</th>
                 </tr>
                 </thead>
                 <tfoot>
@@ -233,19 +249,19 @@
                 </tfoot>
                 <tbody>
                 <tr>
-                    <td>Бірманські будні &#215; 1</td>
+                    <td>Бірманські будні <span class="black">&#215; 1</span></td>
                     <td>150 грн.</td>
                 </tr>
                 <tr>
-                    <td>Хрестоносці &#215; 1</td>
+                    <td>Хрестоносці <span class="black">&#215; 1</span></td>
                     <td>230 грн.</td>
                 </tr>
                 <tr>
-                    <td>Бірманські будні &#215; 1</td>
+                    <td>Бірманські будні <span class="black">&#215; 1</span></td>
                     <td>150 грн.</td>
                 </tr>
                 <tr>
-                    <td>Підсумок</td>
+                    <td class="black">Підсумок</td>
                     <td>530 грн.</td>
                 </tr>
                 </tbody>
@@ -276,11 +292,11 @@
     </div>
 </main>
 
-
 </body>
 
 <footer>
-    <div class="publishing-house"><p>&#169; 2016-2021, Видавництво Жупанського</p>
+    <div class="publishing-house">
+        <p>&#169; 2016-2021, Видавництво Жупанського</p>
         <p>
             <a href="https://publisher.in.ua/vidshkoduvannya-ta-povernennya/">Політика відшкодування та повернення</a>
         </p>
